# ecs

./: CMakeLists.txt
include/ecs/: component_container.hpp  component_container.inl  entity.hpp  registry.hpp  registry.inl  types.hpp  view.hpp  view.inl
src/: component_container.inl  entity.cpp  entity.hpp  main.cpp  registry.cpp  registry.hpp
